fix: overflow in navbar-bottom

--- a/css/style.css
+++ b/css/style.css
@@ -1572,6 +1572,7 @@ img {
     bottom: 0;
     top: 78px;
     padding-top: 30px;
+    overflow-y: scroll;
   }
   .navbar-bottom--visible {
     display: block;
