--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -130,6 +130,7 @@
       bottom: 0
       top: 78px
       padding-top: 30px
+      overflow-y: scroll
       &--visible
         display: block
     &-menu
